css/client-page.css
.container {
  max-width: calc(100vw - 200px);
  margin: auto;
  position: relative;
}

@media only screen and (max-width: 768px) {
  .container {
    max-width: calc(100vw - 20px);
    margin: auto;
    position: relative;
  }

  iframe.responsive-iframe {
    width:200%;
    height:200%;
    transform: scale(.5);
    transform-origin: top left;
    border-radius: 32px;
  }
}


body{
  background-image: linear-gradient(#ED5E50, #F48658, #DB4A48);
}

.z1 {
  z-index: 1;
}

.image-container {
  position: absolute;
  top: 6vw;
  left:0;
  right:0;
  width: 100%;
  margin: 0 auto;
  max-width: 1600px;
}

.image-container img.header-image {
  margin: 0 auto;
  display:block;
}

.framing-container {
  width: 65vw;
  max-width:1200px;
  margin: 1vw auto 10vw;
}


@media only screen and (max-width: 768px) {
  .framing-container {
    width: 90vw;
    margin: 1vw auto 10vw;
  }
}

.top-page{
  padding-top: 20px;
  position: relative;
  z-index: 1;
}

.top-page img {
  height: auto;
}

.resp-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 57.5%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
  border-radius: 16px;
  box-shadow: 0 4px 32px 4px rgba(0,0,0,.5);


}

.slick-slide {
  height: auto !important;
}




/* Then style the iframe to fit in the container div with full height and width */
.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

iframe {
  border: 4px solid #FFFFFF;
  border-radius: 16px;
}


h2 {
  text-align: center;
  color:white;
  font-family: 'Open Sans', sans-serif;
  font-weight: bolder;
  font-size: 40px;
}

/* @media only screen and (max-width: 768px) {
  h2 {
    font-size: 28px;
  }
} */

p{
  text-align: center;
  font-size: 20px;
  line-height: 30px;
  color:white;
  font-family: 'Open Sans', sans-serif;
}

p .bottomp {
  padding-bottom: 20px;
}

.gallery {
  width: 100vw;
  margin: -20px;
}


.can  {
  display: inline-block;
  padding: 100px 5vw;
  width: 25vw;
  position:relative;
}

.can:focus, .slick-slide{
  outline: none;
}


.can .can-wrap {
  width: 16vw;
  min-width: 100px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.can .can-wrap:after{
  content:'';
  display: block;
  position: absolute;
  left: 20%;
  bottom: 30px;
  width: 60%;
  margin: 0 auto;
  height: 10px;
  background: transparent;
  border-radius: 100px;
  box-shadow: 0 -70px 40px rgba(0,0,0,1);
}


.can .can-wrap img{
  transition: transform 500ms ease;
}
.can:hover .can-wrap img{
  transform: translateY(-20px);
}

@media only screen and (max-width: 600px) {
  button {
    font-size: 6px;
    padding: 12px 29px;
  }
}

.can button {

  margin: 0;
  position: absolute;
  left: 50%;
  bottom: 0px;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-family: 'Open Sans', sans-serif;
  border-radius: 26px;
  background-color: #FFD180;
  box-shadow: 0 0px 12px 2px rgba(0,0,0,0.06);
  border: none;
  color: black;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  transition-duration: 0.4s;
}

.can:hover > button {
  background-color: white;
}

.cloud-thing {
  width: calc(100vw + 200px);
    position: absolute;
    margin-top: auto;
    padding-top: 20%;
}

.bottom-section {
  display: flex;
  justify-content: center;
  /* margin-top: 10vw; */
  /* margin-bottom: 15vw; */
  margin-top:4%;
}

.footer img {

  margin: auto;
  width: 100px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.footer p {
  font-family: 'Source Code Pro', monospace;
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 4px;
}

.footer {
  margin-bottom: 50px;
}

